--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")
 find_package(Boost REQUIRED COMPONENTS thread system regex filesystem)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")
+find_package(ZMQ 4.1.4 REQUIRED)
+find_package(Protobuf 2.6 REQUIRED)
 find_package(VREP REQUIRED)
 find_package(BlueZero REQUIRED)
 
@@ -17,6 +19,8 @@ include_directories(${VREP_INCLUDE})
 include_directories(${CMAKE_BINARY_DIR}/generated)
 include_directories(${CMAKE_SOURCE_DIR}/external)
 include_directories(${Boost_INCLUDE_DIRS})
+include_directories(${ZMQ_INCLUDE_DIRS})
+include_directories(${PROTOBUF_INCLUDE_DIR})
 include_directories(${BLUEZERO_INCLUDE_DIRS})
 
 vrep_generate_stubs(${CMAKE_BINARY_DIR}/generated XML_FILE ${CMAKE_SOURCE_DIR}/callbacks.xml LUA_FILE ${CMAKE_SOURCE_DIR}/simExtBlueZero.lua)
