--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
-[submodule "external/v_repStubsGen"]
-	path = external/v_repStubsGen
-	url = https://github.com/CoppeliaRobotics/v_repStubsGen.git
 [submodule "external/v_repPlusPlus"]
 	path = external/v_repPlusPlus
 	url = https://github.com/CoppeliaRobotics/v_repPlusPlus.git
+	branch = master
+[submodule "external/v_repStubsGen"]
+	path = external/v_repStubsGen
+	url = https://github.com/CoppeliaRobotics/v_repStubsGen.git
+	branch = master
