--- a/config.h.in
+++ b/config.h.in
@@ -1,5 +1,7 @@
 #ifndef CONFIG_H_INCLUDED
 #define CONFIG_H_INCLUDED
 
+#cmakedefine BUILD_GIT_VERSION "${BUILD_GIT_VERSION}"
+
 #endif // CONFIG_H_INCLUDED
 
