--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.11)
-project(v_repExtBlueZero)
+project(simExtBlueZero)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -21,29 +21,34 @@ endif()
 
 find_package(Boost REQUIRED COMPONENTS thread system regex filesystem)
 
+if(NOT LIBPLUGIN_DIR)
+    if(DEFINED ENV{COPPELIASIM_ROOT_DIR})
+        set(LIBPLUGIN_DIR $ENV{COPPELIASIM_ROOT_DIR}/programming/libPlugin)
+    else()
+        set(LIBPLUGIN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../libPlugin)
+    endif()
+endif()
 set(CMAKE_MODULE_PATH
     ${CMAKE_MODULE_PATH}
     ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules
-    ${CMAKE_CURRENT_SOURCE_DIR}/cmake/CoppeliaRobotics-modules)
-find_package(VREP 3.5.0 REQUIRED)
+    ${LIBPLUGIN_DIR}/cmake)
+find_package(CoppeliaSim 4.0.0.0 REQUIRED)
 find_package(BlueZero REQUIRED)
 
-include_directories(${VREP_INCLUDE})
+include_directories(${COPPELIASIM_INCLUDE_DIR})
 include_directories(${CMAKE_CURRENT_BINARY_DIR}/generated)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/external)
 include_directories(${Boost_INCLUDE_DIRS})
 include_directories(${BLUEZERO_INCLUDE_DIRS})
 
-vrep_generate_stubs(${CMAKE_CURRENT_BINARY_DIR}/generated XML_FILE ${CMAKE_CURRENT_SOURCE_DIR}/callbacks.xml LUA_FILE ${CMAKE_CURRENT_SOURCE_DIR}/simExtBlueZero.lua)
+coppeliasim_generate_stubs(${CMAKE_CURRENT_BINARY_DIR}/generated XML_FILE ${CMAKE_CURRENT_SOURCE_DIR}/callbacks.xml LUA_FILE ${CMAKE_CURRENT_SOURCE_DIR}/simExtBlueZero.lua)
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
-add_library(v_repExtBlueZero
+add_library(simExtBlueZero
     SHARED
     plugin.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/external/v_repPlusPlus/Plugin.cpp
-    ${CMAKE_CURRENT_BINARY_DIR}/generated/stubs.cpp
-    ${VREP_EXPORTED_SOURCES}
+    ${COPPELIASIM_EXPORTED_SOURCES}
 )
-target_link_libraries(v_repExtBlueZero ${Boost_LIBRARIES} ${VREP_LIBRARIES} ${BLUEZERO_LIBRARIES})
+target_link_libraries(simExtBlueZero ${Boost_LIBRARIES} ${COPPELIASIM_LIBRARIES} ${BLUEZERO_LIBRARIES})
 
